Ticket #1560 (closed defect: fixed)

Opened 3 weeks ago

Last modified 2 weeks ago

libdvdread cannot read directories with swedish umlaut letters

Reported by: marting Assigned to: courmisch
Priority: normal Milestone: 0.9.0-test1
Component: Access Version: master
Severity: normal Keywords: dvdread path directory
Cc: Platform(s): Win32
Difficulty: unknown Work status: Not started

Description

libdvdread failes to read from dirs with umlaut letters, for instance "åäö". To reproduce:

This works: "vlc.exe dvd://c:\mydvd"

This doesnt work: "vlc.exe dvd://c:\mydvdåäö"

libdvdread will fail (and libdvdnav fails to after that), and ffmpeg will take over and play the dvd without handling the dvd menus. This bug can be reproduced in todays git, and older vlc versions.

Only tested on windows.

Change History

04/30/08 18:49:46 changed by courmisch

  • status changed from new to assigned.
  • owner changed from j-b to courmisch.

04/30/08 19:04:37 changed by courmisch

  • status changed from assigned to closed.
  • version set to HEAD.
  • resolution set to fixed.
  • milestone changed from 0.8.6-bugfix to 0.9.0-test1.