Disc reading libs want ANSI rather than UTF-8 paths - fixes #1560